--- a/frontend/admin/src/app/course/course/course.html
+++ b/frontend/admin/src/app/course/course/course.html
@@ -1,9 +1,12 @@
 <div style="height: 70px;">
   <div style="max-width: 1000px; margin-left: auto; margin-right: auto; vertical-align: middle;">
-    <a [routerLink]="['/courses']" style=" display: inline-block;vertical-align: middle;">Courses</a>
+    <button mat-button [routerLink]="['/courses']" style=" display: inline-block;vertical-align: middle;">
+      Courses
+    </button>
     <mat-icon style=" display: inline-block;vertical-align: middle;">chevron_right</mat-icon>
-    <a [routerLink]="['/course/' + course.id]" style=" display: inline-block;vertical-align: middle;"> Course
-      {{course.id}}</a>
+    <button mat-button [routerLink]="['/course/' + course.id]" style=" display: inline-block;vertical-align: middle;">
+      {{ course.id }}
+    </button>
   </div>
 </div>
 <!--<div id="search-component-spinner" *ngIf="!course.id" >
@@ -11,23 +14,23 @@
   </div>-->
 
 <mat-card *ngIf="course">
-  <mat-card-title class="intrev-card-title">Course #{{course.id}}
+  <mat-card-title class="intrev-card-title">Course #{{ course.id }}
     <mat-card-subtitle style="color: white; margin-bottom: 0;">Editing course resource</mat-card-subtitle>
   </mat-card-title>
 
 
   <div>
-    <mat-form-field class="input" *ngIf="isadmin">
-      <mat-select placeholder="{{selected}}" [formControl]="pokemonControl">
+    <mat-form-field class="input" *ngIf="isSuperuser">
+      <mat-select placeholder="{{ selected }}" [formControl]="pokemonControl">
         <mat-optgroup *ngFor="let country of countries" [label]="country.name">
 
           <mat-option *ngFor="let university of country.universities" [value]="university"
                       (click)="course.university = university.id; course.faculty = 0">
-            {{university.name}}
+            {{ university.name }}
           </mat-option>
           <mat-option *ngFor="let faculty of country.faculties" [value]="faculty"
                       (click)="course.faculty = faculty.id; course.university = 0">
-            {{faculty.name}}
+            {{ faculty.name }}
           </mat-option>
         </mat-optgroup>
       </mat-select>
@@ -66,7 +69,7 @@
       </button>
       <mat-chip-list>
         <mat-chip *ngFor="let keyword of keywords" [ngClass]="{'todelete': keyword.remove}">
-          {{keyword.value}}
+          {{ keyword.value }}
           <mat-icon (click)="keyword.remove = !keyword.remove;">cancel</mat-icon>
         </mat-chip>
       </mat-chip-list>
