--- a/frontend/admin/src/app/login/login.component.html
+++ b/frontend/admin/src/app/login/login.component.html
@@ -2,18 +2,30 @@
   <div class="inner-login-container">
     <mat-card class="login-card">
       <mat-card-title class="login-title">CSyllabus Admin Login</mat-card-title>
-      <mat-card-content (keyup.enter) = "submitLogIn()">
+      <mat-card-content (keyup.enter)="submitLogIn()">
         <mat-form-field>
-          <input matInput placeholder="Username" [(ngModel)]="username" required>
+          <input matInput placeholder="Username" [(ngModel)]="username" [formControl]="usernameFormControl">
+          <mat-error *ngIf="usernameFormControl.hasError('required')">
+            Username is <strong>required</strong>
+          </mat-error>
+          <mat-error *ngIf="usernameFormControl.hasError('incorrect')">
+           Unable to log in with provided credentials.
+          </mat-error>
         </mat-form-field>
         <br>
         <mat-form-field>
-          <input matInput placeholder="Password" [type]="!hide ? 'password' : 'text'" [(ngModel)]="password" required>
+          <input matInput placeholder="Password" [type]="!hide ? 'password' : 'text'" [(ngModel)]="password" [formControl]="passwordFormControl">
           <mat-icon matSuffix (click)="hide = !hide">{{!hide ? 'visibility' : 'visibility_off'}}</mat-icon>
+          <mat-error *ngIf="passwordFormControl.hasError('required')">
+            Password is <strong>required</strong>
+          </mat-error>
+          <mat-error *ngIf="passwordFormControl.hasError('incorrect')">
+            Unable to log in with provided credentials.
+          </mat-error>
         </mat-form-field>
       </mat-card-content>
       <mat-card-actions>
-        <button mat-button (click)="submitLogIn()">LOG IN</button>
+        <button mat-button (click)="submitLogIn()" [disabled]="!this.password || !this.username">LOG IN</button>
       </mat-card-actions>
     </mat-card>
   </div>
