--- a/frontend/admin/src/app/university/university/university.html
+++ b/frontend/admin/src/app/university/university/university.html
@@ -1,9 +1,13 @@
 <div style="height: 70px;">
   <div style="max-width: 1000px; margin-left: auto; margin-right: auto; vertical-align: middle;">
-    <a [routerLink]="['/universities']" style=" display: inline-block;vertical-align: middle;">Universities</a>
+    <button mat-button [routerLink]="['/courses']" style=" display: inline-block;vertical-align: middle;">
+      Universities
+    </button>
     <mat-icon style=" display: inline-block;vertical-align: middle;">chevron_right</mat-icon>
-    <a [routerLink]="['/university/' + university.id]" style=" display: inline-block;vertical-align: middle;"> University
-      {{university.id}}</a>
+    <button mat-button [routerLink]="['/university/' + university.id]" style=" display: inline-block;vertical-align: middle;">
+      University
+      {{university.id}}
+    </button>
   </div>
 </div>
 <!--<div id="search-component-spinner" *ngIf="!university.id" >
