--- a/frontend/csyllabus/src/app/components/course/course.component.html
+++ b/frontend/csyllabus/src/app/components/course/course.component.html
@@ -1,7 +1,7 @@
 
 <div class="col-md-12" style="background-color:#eaeaea; padding:0; height:100%">
   <div class="col-md-12" style="height:300px; background-size:cover; background-image:url(images/books.jpg)"></div>
-<div style="width:90%;  margin-right: auto; margin-left: auto; display: block;">
+<div class="container-90p">
 <div class="col-md-12" style="padding-bottom:0px; margin-top:-86px;">
 
   <div class="col-md-8" style="padding-right:0px">
@@ -10,7 +10,7 @@
 
     <div style="text-align:left; background-color:#3c5a96;min-height:56px;line-height:50px">
 
-      <div #test style="display:inline-block; padding-left:20px; width:100%">
+      <div style="display:inline-block; padding-left:20px; width:100%">
         <p *ngIf="course" style="display:inline; font-size:20px; color: white;">{{course.name}}</p>
       </div>
 
@@ -27,24 +27,25 @@
     </div>
 
 <div class="col-md-4" style="padding-left:0px">
-  <div  style="paddig:0px;webkit-box-shadow: 0 2px 11px rgba(0,0,0,0.2);
+  <div  style="padding:0px;webkit-box-shadow: 0 2px 11px rgba(0,0,0,0.2);
     box-shadow: 0 2px 11px rgba(0,0,0,0.2);background-color:white; ">
 
     <div class="col-md-12" style="padding:0px;text-align:left; background-color:#3c5a96; height:56px; line-height:56px">
 
       <div style="display:inline-block; padding-left:20px; vertical-align:top">
-        <p *ngIf="course && course.university" style="display:inline; font-size:20px;color: white;">{{course.university}}</p>
+        <p style="display:inline; font-size:20px;color: white;">Details</p>
       </div>
 
     </div>
 
     <div>
 
-    <mat-list role="list">
-  <mat-list-item style="text-align:left" *ngIf="course && course.faculty" role="listitem"><mat-icon>university</mat-icon> {{course.faculty}}</mat-list-item>
-  <mat-list-item *ngIf="course && course.study_lvl" role="listitem"><mat-icon>university</mat-icon> Study level: {{course.study_lvl}}</mat-list-item>
-  <mat-list-item *ngIf="course && course.semester" role="listitem"><mat-icon>university</mat-icon> Semester: {{course.semester}}</mat-list-item>
-  <mat-list-item *ngIf="course && course.ects" role="listitem"> <mat-icon>university</mat-icon> ECTS:  {{course.ects}}</mat-list-item>
+    <mat-list role="list" style="padding-left:20px">
+      <mat-list-item style="text-align:left" *ngIf="course && course.university" role="listitem">{{course.university}}</mat-list-item>
+  <mat-list-item style="text-align:left" *ngIf="course && course.faculty" role="listitem">{{course.faculty}}</mat-list-item>
+  <mat-list-item *ngIf="course && course.study_lvl" role="listitem">Study level: {{course.study_lvl}}</mat-list-item>
+  <mat-list-item *ngIf="course && course.semester" role="listitem">Semester: {{course.semester}}</mat-list-item>
+  <mat-list-item *ngIf="course && course.ects" role="listitem">Credits:  {{course.ects}}</mat-list-item>
   <mat-list-item *ngIf="course && course.english_level" role="listitem">  English level: {{course.english_level}}</mat-list-item>
 </mat-list>
 
