--- a/frontend/csyllabus/src/app/components/university/university.component.css
+++ b/frontend/csyllabus/src/app/components/university/university.component.css
@@ -90,3 +90,38 @@ table {
 }
 
 
+.bar {
+  fill: #aaa;
+  height: 21px;
+  transition: fill .3s ease;
+  cursor: pointer;
+  font-family: Helvetica, sans-serif;
+
+  text {
+    fill: #555;
+  }
+}
+
+.chart:hover,
+.chart:focus {
+  .bar {
+    fill: #aaa;
+  }
+}
+
+.bar:hover,
+.bar:focus {
+  fill: red !important;
+
+  text {
+    fill: red;
+  }
+}
+
+figcaption {
+  font-weight: bold;
+  color: #000;
+  margin-bottom: 20px;
+}
+
+
