fix more button

--- a/frontend/csyllabus/src/app/core/result-cards-comparator/result-cards-comparator.component.html
+++ b/frontend/csyllabus/src/app/core/result-cards-comparator/result-cards-comparator.component.html
@@ -62,9 +62,10 @@
               <p style="text-align:justify">{{coursetest.description}}</p>
 
               <p style="padding-right:15px; text-align:right">
-                <a mat-icon-button target="_blank" routerLink="course/{{coursetest.id}}">
+                <a mat-icon-button target="_blank" routerLink="/course/{{coursetest.id}}">
                   <b>[More]</b>
                 </a>
+
               </p>
             </div>
           </mat-expansion-panel>
