--- a/frontend/csyllabus/src/app/components/university/university.component.html
+++ b/frontend/csyllabus/src/app/components/university/university.component.html
@@ -8,7 +8,7 @@
 <div  style="webkit-box-shadow: 0 2px 11px rgba(0,0,0,0.2);
     box-shadow: 0 2px 11px rgba(0,0,0,0.2);padding:0; margin-right:10px; background-color:white">
 
-    <div style="text-align:left; background-color:#3c5a96;min-height:56px;line-height:50px">
+    <div style="text-align:left; background-color:#98231a;min-height:56px;line-height:50px">
 
       <div style="display:inline-block; padding-left:20px; width:100%">
         <p *ngIf="university" style="display:inline; font-size:20px; color: white;">{{university.name}}</p>
@@ -30,7 +30,7 @@
   <div  style="padding:0px;webkit-box-shadow: 0 2px 11px rgba(0,0,0,0.2);
     box-shadow: 0 2px 11px rgba(0,0,0,0.2);background-color:white; ">
 
-    <div class="col-md-12" style="padding:0px;text-align:left; background-color:#3c5a96; height:56px; line-height:56px">
+    <div class="col-md-12" style="padding:0px;text-align:left; background-color:#98231a; height:56px; line-height:56px">
 
       <div style="display:inline-block; padding-left:20px; vertical-align:top">
         <p *ngIf="university" style="display:inline; font-size:20px;color: white;">Details</p>
@@ -51,18 +51,13 @@
     </div>
 
   </div>
-  </div>
 
-</div>
 
-  <div class="col-md-12">
-
-    <div class="col-md-4" style="padding-right:0px; padding-top:0px">
 
     <div style="padding:0px;webkit-box-shadow: 0 2px 11px rgba(0,0,0,0.2);
-      box-shadow: 0 2px 11px rgba(0,0,0,0.2); margin-right:10px; background-color:white">
+      box-shadow: 0 2px 11px rgba(0,0,0,0.2); margin-top:10px; background-color:white">
 
-      <div class="col-md-12" style="padding:0px;text-align:left; background-color:#3c5a96;">
+      <div class="col-md-12" style="padding:0px;text-align:left; background-color:#98231a;">
 
 
         <div style="display:inline-block; padding-left:20px; vertical-align:top;height:56px; line-height:56px">
@@ -108,9 +103,17 @@
       </div>
 
     </div>
+
   </div>
 
-  <div class="col-md-8" style="padding-right:0px; webkit-box-shadow: 0 2px 11px rgba(0,0,0,0.2);
+
+</div>
+
+  <div class="col-md-12">
+
+
+
+  <div class="col-md-8" style="display:none;padding-right:0px; webkit-box-shadow: 0 2px 11px rgba(0,0,0,0.2);
     box-shadow: 0 2px 11px rgba(0,0,0,0.2); background-color:white">
 
 
