updated about component

--- a/frontend/csyllabus/src/app/components/about/about.component.html
+++ b/frontend/csyllabus/src/app/components/about/about.component.html
@@ -1,27 +1,3 @@
-<!-- ***** Wellcome Area Start ***** -->
-<section class="wellcome_area clearfix" id="home">
-
-  <div class="container h-100">
-
-    <div class="row h-100 align-items-center">
-
-      <div class="col-sm-12 col-md">
-
-        <div class="wellcome-heading">
-          <h2>Syllabus app</h2>
-          <h3>C</h3>
-          <p>Everything you need to know about your courses. Go to student exchange easily.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- Welcome thumb -->
-  <div class="welcome-thumb wow fadeInDown" data-wow-delay="0.5s">
-    <img src="img/bg-img/welcome-img.png" alt="">
-  </div>
-</section>
-<!-- ***** Wellcome Area End ***** -->
-
 <!-- ***** Special Area Start ***** -->
 <section class="special-area bg-white section_padding_100" id="about">
   <div class="container">
@@ -31,10 +7,37 @@
         <div class="section-heading text-center">
           <h2>Why Is It Special</h2>
           <div class="line-shape"></div>
+          <h2>Works wonders on slim datasets!</h2>
         </div>
       </div>
     </div>
-
+    <!-- Special Description Area -->
+  <div class="special_description_area">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-5">
+          <div class="special_description_img">
+            <img src="images/lsa.jpg" alt="">
+          </div>
+        </div>
+        <div class="col-lg-7 col-xl-7 ml-xl-auto">
+          <div class="special_description_content single-special">
+            <h4 style="color: #2B5A96;">All we need is a short course descriptions text to compare them.</h4>
+          <p style="text-align: left;">
+            Our application uses Natural Language Processing method called Latent Semantic Analysis to compare courses using the dataset of course descriptions. Common vector space representations suffer when coping with two classical natural language problems:
+            synonymy and polysemy. First being not taking into consideration that two different words might have the
+            same meaning to humans and second being the opposite - two same words having different meanings.<br><br>
+            LSA uses co-occurrence of terms in these documents to alleviate this problem and capture the latent semantic
+            association between them.</p>
+            <div class="app-download-area">
+              <div class="app-download-btn wow fadeInUp" data-wow-delay="0.2s">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
     <div class="row">
       <!-- Single Special Area -->
       <div class="col-12 col-md-4">
@@ -64,45 +67,14 @@
           <div class="single-icon">
             <i class="ti-settings" aria-hidden="true"></i>
           </div>
-          <h4>Faculty cooperation</h4>
-          <p>Our app survives because of you. The faculties! Thank you for your support and syllabus data. Csyllabus
-            will survive because of faculty support.</p>
+          <h4>University cooperation</h4>
+          <p>Our app survives because of you. Thank you for your support and syllabus data. Csyllabus
+            will survive because of your support.</p>
         </div>
       </div>
     </div>
   </div>
-  <!-- Special Description Area -->
-  <div class="special_description_area mt-150">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-6">
-          <div class="special_description_img">
-            <img src="https://www.polimi.it/fileadmin/_migrated/pics/Sostieni_Politecnico.jpg" alt="">
-          </div>
-        </div>
-        <div class="col-lg-6 col-xl-5 ml-xl-auto">
-          <div class="special_description_content">
-            <h2>Our Best Propositions for You!</h2>
-            <p>CSyllabus is imagined as a web platform which should ease up process of finding and comparing courses on
-              domestic and foreign faculties. It will enable users to discover and compare courses on interactive way
-              through web application. This “one click” app will save time and provide very useful information to
-              interested parties.</p>
-            <div class="app-download-area">
-              <div class="app-download-btn wow fadeInUp" data-wow-delay="0.2s">
-                <!-- Google Store Btn -->
 
-                <a routerLink="/core">
-                  <i class="fa fa-graduation-cap"></i>
-                  <p class="mb-0">Start exploring and discovering courses</p>
-                </a>
-              </div>
-
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
 </section>
 <!-- ***** Special Area End ***** -->
 
@@ -230,7 +202,7 @@
           </div>
           <div class="cool-facts-content">
             <i class="ion-ios-star-outline"></i>
-            <p><br>WORKING HOURS</p>
+            <p>COURSES</p>
           </div>
         </div>
       </div>
@@ -256,11 +228,11 @@
                 Faculty was very difficult experience for us. Wtih this web application we want to make things
                 simple.”</p>
             </div>
-
+<!--
             <div class="client-name text-center">
               <h5>Zvonimir Relja</h5>
               <p>Computer Engineer</p>
-            </div>
+            </div>-->
           </div>
           <!-- Client Feedback Text  -->
           <div class="client-feedback-text text-center">
@@ -270,11 +242,11 @@
             <div class="client-description text-center">
               <p>“ When going to Erasmus exhange I had to find very similar courses to one I would listen at my faculty.
                 It was very hard! Now with our app you can do it with two clicks! ”</p>
-            </div>
+            </div><!--
             <div class="client-name text-center">
               <h5>Emanuel Guberović</h5>
               <p>Computer Engineer</p>
-            </div>
+            </div>-->
           </div>
 
         </div>
@@ -303,7 +275,7 @@
   </div>
 </section>
 
-<!-- ***** Our Team Area Start -->
+<!-- ***** Our Team Area Start --><!--
 <section class="our-Team-area bg-white section_padding_100_50 clearfix" id="team">
   <div class="container">
     <div class="row">
@@ -420,4 +392,4 @@
     </div>
   </div>
 </section>
-
+-->
